# MetaAgentSystem

./: .gitignore  AgilePlan.md  Cargo.toml  LICENSE  LogBook.md  NextSteps.json  Package.resolved  Package.swift  README.md  StakeholderRequirements.md  Vision.md
Database/: ConversationHistorySchema.sql
Documentation/: AgentCommunicationProtocol.md  ArchitectureDiagrams.md  CommunicationProtocol.md
Sources/: test.failure
Sources/Bootstrap/: bootstrap.swift
Sources/MetaAgentSystem/: AIProtocol.swift  Agent.swift  AgentCommunication.swift  AgentCommunicationModule.swift  AgentCommunicationProtocol.swift  AgentContainer.swift  AgentContainerIsolation.swift  AgentIntegration.swift  AgentManager.swift  AgentMessage.swift  AgentRegistration.swift  Authentication.swift  BasicAgent.swift  BootstrapScript.swift  CICD.swift  CodeRefactor.swift  Communication.swift  CommunicationProtocol.swift  ConversationPersistence.swift  CoreModule.swift  DashboardUI.swift  DataCollectorAgent.swift  DataProcessingPipeline.swift  DatabaseSchema.swift  ErrorHandling.swift  ErrorHandlingMechanisms.swift  InputValidation.swift  Logging.swift  LoggingManager.swift  MessageHandler.swift  NewAgentPrototype.swift  OAuth2Authentication.swift  OllamaAPI.swift  OllamaAPIIntegration.swift  (+12 more)
Sprints/: Sprint_1_Plan.md
design/: AgentCommunication.md  BootstrapProcess.md  ConfigurationManager.md  Decomposition.md  Prioritization.md  Refactoring.md  RequirementsManagement.md  SystemArchitecture.md  Workflow.md
docs/: StakeholderRequirements.md  Vision.md  prompts.json
src/: main.rs
(+97 files in other folders)
