[package]
name = "MetaAgentSystem"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
dotenvy = "0.15.7"
openai-rust = "1.5.2"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
schemars = "0.8.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
